fix: signature not aligned properly

--- a/index.css
+++ b/index.css
@@ -12,11 +12,14 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     background-color: #111;
     color: #ddd;
 }
 
 .jost-text {
+    position: absolute;
+    bottom: 2rem;
     font-family: "Jost", sans-serif;
     font-weight: 200;
     margin-bottom: 4rem;
@@ -29,7 +32,6 @@ body {
 
 section {
     width: 60%;
-    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,10 +76,7 @@ hr {
 }
 
 .sign {
-    position: absolute;
-    left: 50%;
-    bottom: 30%;
-    transform: translateX(-50%);
+    margin-top: 4rem;
     height: 8rem;
     width: 10rem;
 }
@@ -110,9 +109,5 @@ hr {
 
     .initials {
         font-size: 7rem;
-    }
-
-    .sign {
-        bottom: 15%;
     }
 }
